Force GitHub Pages rebuild

--- a/index.html
+++ b/index.html
@@ -4100,3 +4100,4 @@ Check the news grid - no more newspaper icons!`);
     </script>
 </body>
 </html>
+<!-- Force rebuild Fri Jul  4 11:49:37 +07 2025 -->
