chuyển sang ngôn ngữ tiếng anh

--- a/facilities.html
+++ b/facilities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -2335,7 +2335,7 @@
                     <div class="diagram-container" style="width: 100%; max-width: 1200px; height: 600px; position: relative; background: #f8fafc; padding: 40px; box-sizing: border-box;">
                         
                         <!-- Title -->
-                        <div style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); color: #2c3e50; font-size: 20px; font-weight: 700; text-align: center;">SƠ ĐỒ MẠCH ĐIỆN 500kV - HỆ THỐNG TRUYỀN TẢI ĐIỆN</div>
+                        <div style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); color: #2c3e50; font-size: 20px; font-weight: 700; text-align: center;">500kV ELECTRICAL CIRCUIT DIAGRAM - POWER TRANSMISSION SYSTEM</div>
 
                         <!-- 500kV Bus Lines with Animation -->
                         <div class="power-line line-01" style="position: absolute; width: 75%; height: 4px; background: #e74c3c; left: 200px; top: 80px; box-shadow: 0 2px 4px rgba(231, 76, 60, 0.3); z-index: 3;"></div>
