--- a/master-plan.html
+++ b/master-plan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -353,7 +353,7 @@
     <section class="page-header">
         <h1 class="page-title">Master Plan</h1>
         <div class="title-decoration"></div>
-        <p class="page-subtitle">Kế hoạch phát triển toàn diện HEART Technology Park từ 2025 đến 2030 và xa hơn nữa</p>
+        <p class="page-subtitle">Comprehensive development plan for HEART Technology Park from 2025 to 2030 and beyond</p>
     </section>
 
     <div class="container">
@@ -427,8 +427,8 @@
     </div>
 
     <section class="cta-section">
-        <h2 class="cta-title">Tham gia cùng chúng tôi</h2>
-        <p class="cta-subtitle">Khám phá cơ hội đầu tư và hợp tác tại HEART Technology Park</p>
+        <h2 class="cta-title">Join Us</h2>
+        <p class="cta-subtitle">Explore investment and partnership opportunities at HEART Technology Park</p>
         <div class="cta-buttons">
             <a href="investment.html" class="btn btn-primary">🚀 Investment Opportunities</a>
             <a href="contact.html" class="btn btn-secondary">📞 Contact Us</a>
